--- a/app/rutas/referenciales/autor/templates/autor-index.html
+++ b/app/rutas/referenciales/autor/templates/autor-index.html
@@ -6,7 +6,145 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.datatables.net/1.13.4/css/dataTables.bootstrap5.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img
+        src="/static/fotos/logo.jpg"
+        alt="Logo"
+        width="30"
+        height="24"
+        class="d-inline-block align-text-top"
+      />
+      DIGI-LIBROS
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('contactos.vista_contacto') }}">Contactos</a></li>
 
+        <li class="nav-item"><a class="nav-link" href="{{ url_for('tienda') }}">Tienda</a></li>
+       <li class="nav-item">
+        
+  <a class="nav-link" href="{{ url_for('registrar.registrar_index') }}">Registrar Libro</a>
+</li>
+
+
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Categorías
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" href="{{ url_for('infantil.infantilIndex') }}"
+                >Infantiles</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="{{ url_for('novedad.novedadIndex') }}"
+                >Novedades</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="{{ url_for('romance.romanceIndex') }}"
+                >Romance</a
+              >
+            </li>
+          </ul>
+        </li>
+        
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdown"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Referenciales
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li>
+              <a class="dropdown-item" href="{{ url_for('autor.autorIndex') }}"
+                >Autor</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="{{ url_for('editorial.editorialIndex') }}"
+                >Editoriales</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="{{ url_for('tomo.tomoIndex') }}"
+                >Tomo</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="verCarrito"
+            ><i class="fa-solid fa-cart-shopping"></i> Carrito (<span
+              id="carritoCantidad"
+              >0</span
+            >)</a
+          >
+        </li>
+      </ul>
+
+      <!-- Formulario de búsqueda (ahora primero y alineado a la derecha) -->
+      <form class="d-flex ms-auto" id="formBuscar" onsubmit="buscarLibros(event)">
+  <input
+    class="form-control me-2"
+    type="search"
+    placeholder="Buscar libros..."
+    name="query"
+    id="inputBuscar"
+  />
+  <button class="btn btn-outline-success" type="submit">Buscar</button>
+</form>
+
+<div id="resultadosBusqueda" class="mt-4"></div>
+
+      <!-- Usuario y logout (con margen a la izquierda para separarlo del formulario) -->
+      <ul class="navbar-nav ms-3">
+        {% if session.usuario_nombre %}
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">
+              <i class="fa-solid fa-user"></i> {{ session.usuario_nombre }}
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login.logout') }}">
+              <i class="fa-solid fa-right-from-bracket"></i> Cerrar sesión
+            </a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('login.login') }}">
+              <i class="fa-solid fa-right-to-bracket"></i> Iniciar sesión
+            </a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
+  </div>
+</nav>
   <!-- META con el token CSRF generado por Flask -->
   <meta name="csrf-token" content="{{ csrf_token() }}">
 </head>
